<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <PreferenceCategory 
        android:title="@string/reported_data_title" 
        android:summary="@string/reported_data_summary">

        <Preference
            android:key="preview_id"
            android:summary="%s"
            android:title="@string/preview_id_title" />
        <Preference
            android:key="preview_device"
            android:summary="%s"
            android:title="@string/preview_device_title" />
        <Preference
            android:key="preview_version"
            android:summary="%s"
            android:title="@string/preview_version_title" />
        <Preference
            android:key="preview_country"
            android:summary="%s"
            android:title="@string/preview_country_title" />
        <Preference
            android:key="preview_carrier"
            android:summary="%s"
            android:title="@string/preview_carrier_title" />
        
    <Preference
        android:key="pref_view_stats"
        android:title="@string/view_stats_title" />
    
    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/state_settings">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_anonymous_opt_in"
        android:title="@string/enable_reporting_title" />
    
    </PreferenceCategory>

</PreferenceScreen>